test(P4ADEV-2796): removed warning on get(0) for payment options